envcrypt-test/tests/fixtures/invalid_syntax.stderr
error: Invalid syntax. Valid forms are `envc!("VAR_NAME")` and `envc!("VAR_NAME", "custom error message")`.
 --> tests/fixtures/invalid_syntax.rs:4:5
  |
4 |     envc!("this" => "is", wrong)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `envc` (in Nightly builds, run with -Z macro-backtrace for more info)
