envcrypt-test/tests/fixtures/invalid_syntax.rs
use envcrypt::envc;

fn main() {
    envc!("this" => "is", wrong)
}
